# mba-tcc

./: .gitignore  README.md  pyproject.toml
mba_tcc/: 2 - Time Series Decomposition.ipynb  main.py
mba_tcc/services/: translation.py
notebooks/: 1 - Exploratory Data Analysis.ipynb  main.py
notebooks/services/: english.yml  portuguese.yml  theme.py  timeseries.py  translation.py
tests/: test_mba_tcc.py
