[tool.poetry]
name = "mba-tcc"
version = "0.1.0"
description = "TCC MBA - Wind Speed Day Ahead Forecasting"
authors = ["Ettore Aquino <ettore@ettoreaquino.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "^1.21.5"
scipy = "^1.7.3"
pandas = "^1.3.5"
plotly = "^5.5.0"
statsmodels = "^0.13.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyterlab = "^3.2.5"
ipywidgets = "^7.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
